--- a/blogs.html
+++ b/blogs.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
     <!--Adding css link to html page-->
-    <Link href="style-portfolio.css" rel="stylesheet" />
+    <Link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
     <nav class="page-header-nav">
-        <h3>Soumya Ranjan Sahoo</h3>
+        <p>soumya ranjan</p>
         <ul class="navigation-ul">
             <li class="navigation-li">
-                <a href="/index-profile.html" class="navigation-a ">home</a>
+                <a href="/index.html" class="navigation-a ">home</a>
             </li>
             <li class="navigation-li">
                 <a href="/projects.html" class="navigation-a">projects</a>
@@ -26,41 +26,32 @@
         </ul>
     </nav>
 
-    <hr>
-
-    <div class="page-header">
-        <h1>read my <span> code</span></h1>
+    <div class="page-center-content">
+        <h1>read my <span> blogs</span></h1>
     </div>
 
-    <hr>
-
-    <div>
+    <div class="page-sections">
         <h2>dummy blog one</h2>
         <p class="activity-timestamp">June, 2023</p>
         <p class="activity-descp"> Do you know marvel cinematic universe? Let's play a quiz and see.</p>
         <ul>
-            <li><a href="/">Read More</a></li>
+            <li><a href="/" class="rounded-button">Read More</a></li>
         </ul>
     </div>
 
-    <hr>
-
-    <div>
+    <div class="page-sections">
         <h2>second dummy blog</h2>
         <p class="activity-timestamp">June, 2023</p>
         <p class="activity-descp"> A CLI app built with nodeJS. You can send this to your friends and find out who
             really
             knows you</p>
         <ul>
-            <li><a href="/">Read More</a></li>
+            <li><a href="/" class="rounded-button">Read More</a></li>
         </ul>
     </div>
 
-
-    <hr>
-
     <footer>
-        <div>Social media presence</div>
+        <p>Social media presence</p>
         <ul>
             <li><a href="/">github</a></li>
             <li><a href="/">twitter</a></li>
