--- a/projects.html
+++ b/projects.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <!--Adding css link to html page-->
-    <Link href="style-portfolio.css" rel="stylesheet" />
+    <Link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
     <nav class="page-header-nav">
-        <h3>Soumya Ranjan Sahoo</h3>
+        <p>soumya ranjan</p>
         <ul class="navigation-ul">
             <li class="navigation-li">
-                <a href="/index-profile.html" class="navigation-a ">home</a>
+                <a href="/index.html" class="navigation-a ">home</a>
             </li>
             <li class="navigation-li">
                 <a href="/projects.html" class="navigation-a navigation-active-text">projects</a>
@@ -26,42 +26,33 @@
         </ul>
     </nav>
 
-    <hr>
+    <div class="page-center-content">
+        <p>see my <span> code</span></p>
+    </div>
 
-    <header>
-        <h1>see my <span> code</span></h1>
-    </header>
-
-    <hr>
-
-    <div>
+    <div class="page-sections">
         <h2>are you a marvel fan?</h2>
         <p class="activity-timestamp">June, 2023</p>
         <p class="activity-descp"> Do you know marvel cinematic universe? Let's play a quiz and see.</p>
         <ul>
-            <li><a href="/">Live Project</a></li>
-            <li><a href="/">View Source</a></li>
+            <li><a href="/" class="rounded-button">Live Project</a></li>
+            <li><a href="/" class="rounded-button-lite">View Source</a></li>
         </ul>
     </div>
 
-    <hr>
-
-    <div>
+    <div class="page-sections">
         <h2>how well do you know me?</h2>
         <p class="project-timestamp">June, 2023</p>
         <p class="project-descp"> A CLI app built with nodeJS. You can send this to your friends and find out who really
             knows you</p>
         <ul>
-            <li><a href="/">Live Project</a></li>
-            <li><a href="/">View Source</a></li>
+            <li><a href="/" class="rounded-button">Live Project</a></li>
+            <li><a href="/" class="rounded-button-lite">View Source</a></li>
         </ul>
     </div>
 
-
-    <hr>
-
     <footer>
-        <div>Social media presence</div>
+        <p>Social media presence</p>
         <ul>
             <li><a href="/">github</a></li>
             <li><a href="/">twitter</a></li>
