updated projects page with links of source code and live links

--- a/projects.html
+++ b/projects.html
@@ -31,12 +31,12 @@
     </div>
 
     <div class="page-sections">
-        <h2>are you a marvel fan?</h2>
+        <h2>are you a UFC fan?</h2>
         <p class="activity-timestamp">June, 2023</p>
         <p class="activity-descp"> Do you know marvel cinematic universe? Let's play a quiz and see.</p>
         <ul>
-            <li><a href="/" class="rounded-button">Live Project</a></li>
-            <li><a href="/" class="rounded-button-lite">View Source</a></li>
+            <li><a href="https://replit.com/@SoumyaRanjan32/Are-you-a-UFC-fan-MarkTwo" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/cli-project-markone" class="rounded-button-lite">View Source</a></li>
         </ul>
     </div>
 
@@ -46,8 +46,49 @@
         <p class="project-descp"> A CLI app built with nodeJS. You can send this to your friends and find out who really
             knows you</p>
         <ul>
-            <li><a href="/" class="rounded-button">Live Project</a></li>
-            <li><a href="/" class="rounded-button-lite">View Source</a></li>
+            <li><a href="https://replit.com/@SoumyaRanjan32/How-Well-Do-you-Know-me-MarkOne#index.js" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/cli-project-marktwo" class="rounded-button-lite">View Source</a></li>
+        </ul>
+    </div>
+
+    <div class="page-sections">
+        <h2>Minions Speak</h2>
+        <p class="project-timestamp">July, 2023</p>
+        <p class="project-descp"> A fun web app that let's you convert your input sentence in minion's language.</p>
+        <ul>
+            <li><a href="https://soumya-banana-speak.netlify.app/" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/minion-speak-marksix" class="rounded-button-lite">View Source</a></li>
+        </ul>
+    </div>
+
+    <div class="page-sections">
+        <h2>Uncle Donald Talks</h2>
+        <p class="project-timestamp">July, 2023</p>
+        <p class="project-descp"> A playful web app that let's that translates your input by the good ol Donald uncle.</p>
+        <ul>
+            <li><a href="https://uncle-donald-talks.netlify.app/" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/Uncle-Donald-markseven" class="rounded-button-lite">View Source</a></li>
+        </ul>
+    </div>
+
+
+    <div class="page-sections">
+        <h2>Emoji interpreter</h2>
+        <p class="project-timestamp">July, 2023</p>
+        <p class="project-descp"> Do you often confuse what Emoji to send. Fear not the Emoji interpreter tells you the meaning of an emoji. </p>
+        <ul>
+            <li><a href="https://emoji-interpreter-ripan.netlify.app/" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/emoji-interpreter-markeight" class="rounded-button-lite">View Source</a></li>
+        </ul>
+    </div>
+
+    <div class="page-sections">
+        <h2>Travel list</h2>
+        <p class="project-timestamp">July, 2023</p>
+        <p class="project-descp"> This web app suggests places you can travel to as per occasions.</p>
+        <ul>
+            <li><a href="https://solo-travel-ripan.netlify.app/" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/solotravel-marknine" class="rounded-button-lite">View Source</a></li>
         </ul>
     </div>
 
