Updated the blogs page. changed the primary color theme and the name font type.

--- a/blogs.html
+++ b/blogs.html
@@ -31,32 +31,31 @@
     </div>
 
     <div class="page-sections">
-        <h2>dummy blog one</h2>
-        <p class="activity-timestamp">June, 2023</p>
-        <p class="activity-descp"> Do you know marvel cinematic universe? Let's play a quiz and see.</p>
+        <h2>CI/CD for Unity with Plastic-SCM</h2>
+        <p class="activity-timestamp">May, 2022</p>
+        <p class="activity-descp"> Explains the use case scenario of CI/CD set up for our unity game for build automation...</p>
         <ul>
-            <li><a href="/" class="rounded-button">Read More</a></li>
+            <li><a href="https://medium.com/@soumyaripan/overview-of-ci-cd-setup-with-unity-plastic-scm-teamcity-for-automating-builds-in-our-game-e98516213f8f" class="rounded-button">Read More</a></li>
         </ul>
     </div>
 
     <div class="page-sections">
-        <h2>second dummy blog</h2>
-        <p class="activity-timestamp">June, 2023</p>
+        <h2>Useful Plugins for Unity</h2>
+        <p class="activity-timestamp">June, 2022</p>
         <p class="activity-descp"> A CLI app built with nodeJS. You can send this to your friends and find out who
             really
             knows you</p>
         <ul>
-            <li><a href="/" class="rounded-button">Read More</a></li>
+            <li><a href="https://medium.com/@soumyaripan/useful-plugin-and-tools-for-unity-459acdaf7306" class="rounded-button">Read More</a></li>
         </ul>
     </div>
 
     <footer>
         <p>Social media presence</p>
         <ul>
-            <li><a href="/">github</a></li>
-            <li><a href="/">twitter</a></li>
-            <li><a href="/">linkedin</a></li>
-
+            <li><a href="https://github.com/Soumya323">github</a></li>
+            <li><a href="https://twitter.com/Ripann_?t=eWuH7_iiwAdYzr-hX5_Dzw&s=09">twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/soumya-ranjan-sahoo-60a601101">linkedin</a></li>
         </ul>
     </footer>
 
