--- a/projects.html
+++ b/projects.html
@@ -95,10 +95,9 @@
     <footer>
         <p>Social media presence</p>
         <ul>
-            <li><a href="/">github</a></li>
-            <li><a href="/">twitter</a></li>
-            <li><a href="/">linkedin</a></li>
-
+            <li><a href="https://github.com/Soumya323">github</a></li>
+            <li><a href="https://twitter.com/Ripann_?t=eWuH7_iiwAdYzr-hX5_Dzw&s=09">twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/soumya-ranjan-sahoo-60a601101">linkedin</a></li>
         </ul>
     </footer>
 
