project page updated

--- a/projects.html
+++ b/projects.html
@@ -92,6 +92,53 @@
         </ul>
     </div>
 
+    <div class="page-sections">
+        <h2>Cash register app</h2>
+        <p class="project-timestamp">July, 2023</p>
+        <p class="project-descp"> Ever wondered how cashier calcualtes your change. The apps takes money from customer and calculates change amount to return.</p>
+        <ul>
+            <li><a href="https://cash-register-ten.netlify.app/" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/cash-register-markten" class="rounded-button-lite">View Source</a></li>
+        </ul>
+    </div>
+
+    <div class="page-sections">
+        <h2>is your birthday lucky</h2>
+        <p class="project-timestamp">July, 2023</p>
+        <p class="project-descp"> Do you have a luck birtyday? Jump in and check here.<ul>
+            <li><a href="https://isyourbirthdaylucky-mark-eleven.netlify.app/" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/is-your-birthday-lucky-markeleven" class="rounded-button-lite">View Source</a></li>
+        </ul>
+    </div>
+
+    <div class="page-sections">
+        <h2>triangle quiz</h2>
+        <p class="project-timestamp">July, 2023</p>
+        <p class="project-descp"> Fun site to try out your triangle knowledge!!<ul>
+            <li><a href="https://triangle-quiz-marktwelve.netlify.app/" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/triangle-quiz-marktwelve" class="rounded-button-lite">View Source</a></li>
+        </ul>
+    </div>
+
+    <div class="page-sections">
+        <h2>is your birthday palindrome</h2>
+        <p class="project-timestamp">July, 2023</p>
+        <p class="project-descp"> Is your birthday a plaidrome!!<ul>
+            <li><a href="https://is-your-birthday-palindrome-13.netlify.app/" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/palindrome-birthday-markthirteen" class="rounded-button-lite">View Source</a></li>
+        </ul>
+    </div>
+
+    <div class="page-sections">
+        <h2>stock profit loss calculator</h2>
+        <p class="project-timestamp">July, 2023</p>
+        <p class="project-descp"> Is your borth!!<ul>
+            <li><a href="https://stock-profit-loss-markfourteen.netlify.app/" class="rounded-button">Live Project</a></li>
+            <li><a href="https://github.com/Soumya323/stock-PL-calculator-markfourteen" class="rounded-button-lite">View Source</a></li>
+        </ul>
+    </div>
+
+
     <footer>
         <p>Social media presence</p>
         <ul>
